--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -28,7 +28,8 @@ env:
   MAVEN_PUBLISH_REGISTRY_URL: ${{ secrets.MAVEN_PUBLISH_REGISTRY_URL }}
   PGP_PRIVATE_KEY: ${{ secrets.PGP_PRIVATE_KEY }}
   PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
-  GO_VERSION: "1.22"
+  NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+  GO_VERSION: "1.23"
   DAGGER_VERSION: "0.12.3"
 
 jobs:
