--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -19,7 +19,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Flipt
-        uses: flipt-io/setup-action@v0.1.1
+        uses: flipt-io/setup-action@v0.2.0
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
