--- a/flipt-client-csharp/src/FliptClient/FliptClient.csproj
+++ b/flipt-client-csharp/src/FliptClient/FliptClient.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>Flipt.Client</PackageId>
-    <Version>0.0.1-rc.2</Version>
+    <Version>0.0.1</Version>
     <Authors>Flipt Devs (dev@flipt.io)</Authors>
     <Company>Flipt.io</Company>
     <Description>Flipt Client SDK</Description>
