--- a/flipt-client-ruby/Gemfile
+++ b/flipt-client-ruby/Gemfile
@@ -5,11 +5,11 @@ source 'https://rubygems.org'
 # Specify your gem's dependencies in flipt-client-ruby.gemspec
 gemspec
 
-gem 'ffi', '~> 1.16'
+gem 'ffi', '~> 1.17'
 gem 'rake', '~> 12.0'
 
 group :development do
   gem 'bundler', '~> 2.0'
   gem 'rspec', '~> 3.0'
-  gem 'rubocop', require: false
+  gem 'rubocop', '~> 1.68', require: false
 end
