chore: use cross for android x64

--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -73,7 +73,7 @@ jobs:
           - name: Android-x86_64
             os: ubuntu-latest
             target: x86_64-linux-android
-            use_cross: false
+            use_cross: true
 
     runs-on: ${{ matrix.platform.os }}
 
