chore: enable Android build (#531)
* chore: fix swift readme badge

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: enable android engine builds

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: use cross for android x64

---------

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -65,10 +65,15 @@ jobs:
             target: aarch64-apple-ios-sim
             use_cross: false
 
-          # - name: Android-arm64
-          #   os: ubuntu-latest
-          #   target: aarch64-linux-android
-          #   use_cross: true
+          - name: Android-arm64
+            os: ubuntu-latest
+            target: aarch64-linux-android
+            use_cross: true
+
+          - name: Android-x86_64
+            os: ubuntu-latest
+            target: x86_64-linux-android
+            use_cross: true
 
     runs-on: ${{ matrix.platform.os }}
 
