--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -1,26 +1,22 @@
-name: flipt_client
-description: Flipt Client Evaluation SDK for Dart
-version: 0.3.0
-homepage: https://flipt.io
-
-environment:
-  sdk: ">=2.12.0 <4.0.0"
-
 dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-
+description: Flipt Client Evaluation SDK for Dart
 dev_dependencies:
-  test: ^1.21.0
-  lints: ">=4.0.0 <6.0.0"
   build_runner: ^2.3.3
   json_serializable: ^6.6.2
-
+  lints: '>=4.0.0 <6.0.0'
+  test: ^1.21.0
+environment:
+  sdk: '>=2.12.0 <4.0.0'
 flutter:
   assets:
-    - lib/src/ffi/linux_x86_64/libfliptengine.so
-    - lib/src/ffi/linux_arm64/libfliptengine.so
-    - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
-    - lib/src/ffi/darwin_arm64/libfliptengine.dylib
-    - lib/src/ffi/windows_x86_64/fliptengine.dll
+  - lib/src/ffi/linux_x86_64/libfliptengine.so
+  - lib/src/ffi/linux_arm64/libfliptengine.so
+  - lib/src/ffi/darwin_x86_64/libfliptengine.dylib
+  - lib/src/ffi/darwin_arm64/libfliptengine.dylib
+  - lib/src/ffi/windows_x86_64/fliptengine.dll
+homepage: https://flipt.io
+name: flipt_client
+version: 0.3.1
