--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -1,4 +1,4 @@
-name: Test Swift SDK
+name: Test Android SDK
 on:
   push:
     branches:
@@ -15,7 +15,7 @@ permissions:
 jobs:
   test:
     name: Integration Tests
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Sources
         uses: actions/checkout@v4
@@ -31,10 +31,14 @@ jobs:
           toolchain: 1.75.0
           override: true
 
-      - name: Install Swift
-        uses: swift-actions/setup-swift@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          swift-version: "5.9"
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
 
       - name: Run flipt
         env:
@@ -45,7 +49,7 @@ jobs:
       - name: Build Engine
         run: |
           pushd ./flipt-engine-ffi
-          ./build.sh swift
+          ./build.sh android
           popd
 
       - name: Run Integration Tests
@@ -53,5 +57,5 @@ jobs:
           FLIPT_URL: "http://0.0.0.0:8080"
           FLIPT_AUTH_TOKEN: "secret"
         run: |
-          cd ./flipt-client-swift
-          swift test
+          cd ./flipt-client-kotlin-android
+          ./gradlew connectedAndroidTest
