--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -40,18 +40,16 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Run flipt
-        env:
-          FLIPT_STORAGE_TYPE: "local"
-          FLIPT_STORAGE_LOCAL_PATH: "./test/fixtures/testdata"
-        run: flipt&
+      - name: Install Android NDK
+        run: |
+          sdkmanager "ndk:27.2.12479018"
 
       - name: Update config.toml
         run: |
           mkdir -p ~/.cargo
           cat << 'EOF' > ~/.cargo/config.toml
           [target.x86_64-linux-android]
-          linker = "x86_64-linux-android21-clang"
+          linker = "x86_64-linux-android27-clang"
           EOF
 
       - name: Build Engine
@@ -59,6 +57,12 @@ jobs:
           pushd ./flipt-engine-ffi
           ./build.sh android
           popd
+
+      - name: Run flipt
+        env:
+          FLIPT_STORAGE_TYPE: "local"
+          FLIPT_STORAGE_LOCAL_PATH: "./test/fixtures/testdata"
+        run: flipt&
 
       - name: Run Integration Tests
         env:
