--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install Android NDK
         run: |
-          sdkmanager "ndk:27.2.12479018"
+          sdkmanager "ndk;27.2.12479018"
 
       - name: Update config.toml
         run: |
