--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: "17"
+          distribution: "temurin"
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
@@ -46,10 +46,13 @@ jobs:
 
       - name: Update config.toml
         run: |
+          rustup target add arm-linux-androideabi
           mkdir -p ~/.cargo
           cat << 'EOF' > ~/.cargo/config.toml
           [target.x86_64-linux-android]
           linker = "x86_64-linux-android21-clang"
+          [target.aarch64-linux-android]
+          linker = "aarch64-linux-android21-clang"
           EOF
 
       - name: Build Engine
