--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -7,6 +7,11 @@ on:
     branches-ignore:
       - release/*
   workflow_dispatch:
+  workflow_run:
+    workflows:
+      - package-ffi-engine
+    types:
+      - completed
 
 permissions:
   contents: write
@@ -25,12 +30,6 @@ jobs:
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: 1.75.0
-          override: true
-
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -46,64 +45,72 @@ jobs:
           profile: default
           emulator-build: stable
 
-      - name: Add Android NDK to PATH
-        run: |
-          echo "$ANDROID_HOME/ndk/27.2.12479018/toolchains/llvm/prebuilt/linux-x86_64/bin" >> $GITHUB_PATH
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
+          private_key: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
+          installation_id: ${{ secrets.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
 
-      - name: Update config.toml
-        run: |
-          rustup target add arm-linux-androideabi
-          mkdir -p ~/.cargo
-          cat << 'EOF' > ~/.cargo/config.toml
-          [target.x86_64-linux-android]
-          linker = "x86_64-linux-android21-clang"
-          [target.aarch64-linux-android]
-          linker = "aarch64-linux-android21-clang"
-          EOF
+      - name: Download Artifact (x86_64)
+        uses: actions/download-artifact@v4
+        with:
+          github-token: ${{ steps.generate_token.outputs.token }}
+          name: flipt-engine-ffi-x86_64-linux-android.tar.gz
+          path: flipt-engine-ffi-x86_64-linux-android.tar.gz
 
-      - name: Build Engine
-        run: |
-          pushd ./flipt-engine-ffi
-          ./build.sh android
-          popd
+      - name: Download Artifact (arm64)
+        uses: actions/download-artifact@v4
+        with:
+          github-token: ${{ steps.generate_token.outputs.token }}
+          name: flipt-engine-ffi-aarch64-linux-android.tar.gz
+          path: flipt-engine-ffi-aarch64-linux-android.tar.gz
 
-      - name: Run flipt
-        env:
-          FLIPT_STORAGE_TYPE: "local"
-          FLIPT_STORAGE_LOCAL_PATH: "./test/fixtures/testdata"
-        run: flipt&
-
-      - name: Install System Image
+      - name: Extract Artifacts
         run: |
-          echo "Installing system image..."
-          sdkmanager "system-images;android-33;google_apis;x86_64"
+          tar -xzvf flipt-engine-ffi-x86_64-linux-android.tar.gz -C ./flipt-engine-ffi-x86_64-linux-android
+          tar -xzvf flipt-engine-ffi-aarch64-linux-android.tar.gz -C ./flipt-engine-ffi-aarch64-linux-android
+          ls -la ./flipt-engine-ffi-x86_64-linux-android
+          ls -la ./flipt-engine-ffi-aarch64-linux-android
 
-      - name: Create Emulator
-        run: |
-          echo "Creating emulator..."
-          echo "no" | avdmanager create avd -n test -k "system-images;android-33;google_apis;x86_64" --device "pixel"
+      # - name: Run flipt
+      #   env:
+      #     FLIPT_STORAGE_TYPE: "local"
+      #     FLIPT_STORAGE_LOCAL_PATH: "./test/fixtures/testdata"
+      #   run: flipt&
 
-      - name: Start Emulator
-        run: |
-          echo "Starting emulator..."
-          $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-boot-anim -no-window -gpu swiftshader_indirect &
+      # - name: Install System Image
+      #   run: |
+      #     echo "Installing system image..."
+      #     sdkmanager "system-images;android-33;google_apis;x86_64"
 
-      - name: Wait for Emulator to Boot
-        run: |
-          echo "Waiting for emulator to boot..."
-          adb wait-for-device
-          adb shell getprop init.svc.bootanim | grep -m 1 stopped
+      # - name: Create Emulator
+      #   run: |
+      #     echo "Creating emulator..."
+      #     echo "no" | avdmanager create avd -n test -k "system-images;android-33;google_apis;x86_64" --device "pixel"
 
-      - name: Run Integration Tests
-        env:
-          FLIPT_URL: "http://0.0.0.0:8080"
-          FLIPT_AUTH_TOKEN: "secret"
-        run: |
-          cd ./flipt-client-kotlin-android
-          ./gradlew connectedAndroidTest
+      # - name: Start Emulator
+      #   run: |
+      #     echo "Starting emulator..."
+      #     $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-boot-anim -no-window -gpu swiftshader_indirect &
 
-      - name: Stop Emulator
-        if: always()
-        run: |
-          echo "Stopping emulator..."
-          adb emu kill
+      # - name: Wait for Emulator to Boot
+      #   run: |
+      #     echo "Waiting for emulator to boot..."
+      #     adb wait-for-device
+      #     adb shell getprop init.svc.bootanim | grep -m 1 stopped
+
+      # - name: Run Integration Tests
+      #   env:
+      #     FLIPT_URL: "http://0.0.0.0:8080"
+      #     FLIPT_AUTH_TOKEN: "secret"
+      #   run: |
+      #     cd ./flipt-client-kotlin-android
+      #     ./gradlew connectedAndroidTest
+
+      # - name: Stop Emulator
+      #   if: always()
+      #   run: |
+      #     echo "Stopping emulator..."
+      #     adb emu kill
