chore: try workflow run again
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -2,10 +2,8 @@ name: Test Android SDK
 on:
   workflow_dispatch:
   workflow_run:
-    workflows:
-      - package-ffi-engine
-    types:
-      - completed
+    workflows: ["Package FFI Engine"]
+    types: [completed]
 
 permissions:
   contents: write
