chore: try native android sdk test action (#615)
* chore: try native android sdk test action

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to set path to clang

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: tyr android21

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to install ndk

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: semicolon

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try android29-clang

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: yes

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: more ndk fun

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to add clang to path

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* added missing steps

Signed-off-by: Roman Dmytrenko <rdmytrenko@gmail.com>

* added arm64-v8a

Signed-off-by: Roman Dmytrenko <rdmytrenko@gmail.com>

* fix rust ndk setup

Signed-off-by: Roman Dmytrenko <rdmytrenko@gmail.com>

* run emulator

Signed-off-by: Roman Dmytrenko <rdmytrenko@gmail.com>

* chore: try to download already build ffi engine for android

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: run on workflow completed only

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try workflow run again

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

---------

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>
Signed-off-by: Roman Dmytrenko <rdmytrenko@gmail.com>
Co-authored-by: Roman Dmytrenko <rdmytrenko@gmail.com>

--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -36,21 +36,17 @@ jobs:
         with:
           swift-version: "5.9"
 
-      - name: run flipt
+      - name: Run flipt
         env:
           FLIPT_STORAGE_TYPE: "local"
           FLIPT_STORAGE_LOCAL_PATH: "./test/fixtures/testdata"
         run: flipt&
 
-      - name: Install Rust Targets
-        run: |
-          rustup target add aarch64-apple-ios x86_64-apple-ios aarch64-apple-ios-sim
-
       - name: Build Engine
         run: |
-          cd ./flipt-engine-ffi
-          ./build.sh
-          cd ..
+          pushd ./flipt-engine-ffi
+          ./build.sh swift
+          popd
 
       - name: Run Integration Tests
         env:
