--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -2,7 +2,7 @@ name: Test Android SDK
 on:
   workflow_dispatch:
     inputs:
-      run_id:
+      caller_run_id:
         type: string
         required: true
 
@@ -52,7 +52,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-Android-x86_64.tar.gz
           path: /tmp/flipt-engine-ffi-Android-x86_64.tar.gz
-          run_id: ${{ inputs.run_id }}
+          run_id: ${{ inputs.caller_run_id }}
 
       - name: Download Artifact (arm64)
         uses: actions/download-artifact@v4
@@ -60,7 +60,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-Android-arm64.tar.gz
           path: /tmp/flipt-engine-ffi-Android-arm64.tar.gz
-          run_id: ${{ inputs.run_id }}
+          run_id: ${{ inputs.caller_run_id }}
 
       - name: Extract Artifacts
         run: |
