--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -50,24 +50,22 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
-          name: flipt-engine-ffi-Android-x86_64.tar.gz
-          path: /tmp/flipt-engine-ffi-Android-x86_64.tar.gz
+          name: flipt-engine-ffi-Android-x86_64
+          path: /tmp/flipt-engine-ffi-Android-x86_64
           run-id: ${{ inputs.caller_run_id }}
 
       - name: Download Artifact (arm64)
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
-          name: flipt-engine-ffi-Android-arm64.tar.gz
-          path: /tmp/flipt-engine-ffi-Android-arm64.tar.gz
+          name: flipt-engine-ffi-Android-arm64
+          path: /tmp/flipt-engine-ffi-Android-arm64
           run-id: ${{ inputs.caller_run_id }}
 
-      - name: Extract Artifacts
+      - name: Show Artifacts
         run: |
-          tar -xzvf /tmp/flipt-engine-ffi-Android-x86_64.tar.gz -C /tmp/flipt-engine-ffi-Android-x86_64
-          tar -xzvf /tmp/flipt-engine-ffi-Android-arm64.tar.gz -C /tmp/flipt-engine-ffi-Android-arm64
-          ls -la /tmp/flipt-engine-ffi-Android-x86_64
-          ls -la /tmp/flipt-engine-ffi-Android-arm64
+          tree /tmp/flipt-engine-ffi-Android-x86_64
+          tree /tmp/flipt-engine-ffi-Android-arm64
 
       # - name: Run flipt
       #   env:
