--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -50,7 +50,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
-          name: flipt-engine-ffi-Android-x86_64
+          name: flipt-engine-ffi-Android-x86_64.tar.gz
           path: /tmp/flipt-engine-ffi-Android-x86_64
           run-id: ${{ inputs.caller_run_id }}
 
@@ -58,12 +58,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           github-token: ${{ steps.generate_token.outputs.token }}
-          name: flipt-engine-ffi-Android-arm64
+          name: flipt-engine-ffi-Android-arm64.tar.gz
           path: /tmp/flipt-engine-ffi-Android-arm64
           run-id: ${{ inputs.caller_run_id }}
 
       - name: Show Artifacts
         run: |
+          apt-get install -y tree
           tree /tmp/flipt-engine-ffi-Android-x86_64
           tree /tmp/flipt-engine-ffi-Android-arm64
 
