--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -73,6 +73,7 @@ jobs:
         run: |
           mkdir -p ../flipt-client-kotlin-android/src/main/cpp/libs/x86_64
           mkdir -p ../flipt-client-kotlin-android/src/main/cpp/libs/arm64-v8a
+          mkdir -p ../flipt-client-kotlin-android/src/main/cpp/include
           mv /tmp/flipt-engine-ffi-Android-x86_64/target/x86_64-linux-android/release/libfliptengine.a ../flipt-client-kotlin-android/src/main/cpp/libs/x86_64/
           mv /tmp/flipt-engine-ffi-Android-arm64/target/aarch64-linux-android/release/libfliptengine.a ../flipt-client-kotlin-android/src/main/cpp/libs/arm64-v8a/
           cp -r ../flipt-engine-ffi/include/ ../flipt-client-kotlin-android/src/main/cpp/include
