--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -17,18 +17,16 @@ android {
         ndk {
             abiFilters "x86_64", "arm64-v8a"
         }
+        def fliptUrl = System.getenv("FLIPT_URL") ?: ""
+        def fliptAuthToken = System.getenv("FLIPT_AUTH_TOKEN") ?: ""
+        buildConfigField("String", "FLIPT_URL", "\"$fliptUrl\"")
+        buildConfigField("String", "FLIPT_AUTH_TOKEN", "\"$fliptAuthToken\"")
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField("String", "FLIPT_URL", "\"${System.getenv("FLIPT_URL") ?: ""}\"")
-            buildConfigField("String", "FLIPT_AUTH_TOKEN", "\"${System.getenv("FLIPT_AUTH_TOKEN") ?: ""}\"")
-        }
-        debug {
-            buildConfigField("String", "FLIPT_URL", "\"${System.getenv("FLIPT_URL") ?: ""}\"")
-            buildConfigField("String", "FLIPT_AUTH_TOKEN", "\"${System.getenv("FLIPT_AUTH_TOKEN") ?: ""}\"")
         }
     }
     compileOptions {
@@ -38,6 +36,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += '-opt-in=kotlin.RequiresOptIn'
     }
 
     externalNativeBuild {
