--- a/.github/workflows/package-ffi-engine.yml
+++ b/.github/workflows/package-ffi-engine.yml
@@ -101,7 +101,7 @@ jobs:
           key: ${{ runner.os }}-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Set RUSTFLAGS
-        if: endsWith(matrix.platform.target, '-musl')
+        if: endsWith(matrix.platform.target, '-musl') || endsWith(matrix.platform.target, '-android')
         run: |
           echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
 
@@ -159,3 +159,22 @@ jobs:
           tag_name: flipt-engine-ffi-${{ github.event.inputs.tag }}
           files: |
             flipt-engine-ffi-${{ matrix.platform.name }}${{ startsWith(matrix.platform.name, 'Windows') && '.zip' || '.tar.gz' }}
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v2
+        with:
+          app_id: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
+          private_key: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
+          installation_id: ${{ secrets.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
+
+      - name: Trigger Test Android SDK
+        run: |
+          curl -X POST -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/flipt-io/flipt-client-sdks/actions/workflows/test-android-sdk.yml/dispatches \
+            -d '{"ref":"${{ github.head_ref }}", "inputs":{"caller_run_id":"${{ github.run_id }}"}}'
